- when rebooting EVSE if our relay is closed, set pilot to +12VDC and wait 3 sec
	to give EV time to open its contactor before we open ours
- UL-mandated GFI test before closing contacts causing spurious GFI faults
	-> add a 200ms delay after GFI test
- during hard fault, disable Exit menu item
- misc code cleanup

vD3.7.0 SCL 20150423
- added avrstuff.h/cpp -> switch from Arduino digital pin functions to
	DigitalPin

vD3.6.9 SCL 20150423
- GFCI test message now "GFCI". Only fault will cause "GFCI FAULT"

vD3.6.8 SCL 20150413
- merge NSayer PR #32 OpenEVSE II streamline

vD3.6.7 SCL 20150410
- merge NSayer PR: Latest OpenEVSE II 1.0 hardware changes #30
1. Gut ReadACPins(). It s unused.
2. GROUND_TEST_PIN is gone in the 1.0 hardware.
3. RELAY_TEST_PIN is high when charging or it s a ground fail. It s low
when not charging or it s a stuck relay.

vD3.6.6 SCL 20150406
- added SAMPLE_ACPINS logic for setup with MID400 using inline diodes
- added FT_ENDURANCE and FT_READ_AC_PINS
- replace booleans w/ uint8_t
- in GfiSelfTest() delay(50) when reading GFI_PIN
- add GFI self test before closing relay per UL (UL_GFI_SELFTEST)
- change GFI_TEST_CYCLES 50->60 GFI_PULSE_DURATION_US 8000->8333

vD3.6.5 SCL 20150406
- added HardFault()
- GFI_RETRY_COUNT 255 -> 6 and GFI_TIMEOUT 1min -> 5min
- set SERVICE REQUIRED message after GFI retries exhausted
- added nosave parm to SetCurrentCapacity()

vD3.6.4 SCL 20150406
- fix compile error in rapi_proc.cpp due to prog_char fix
- CraigK Patch 6: temp monitoring and kWh recording
- CraigK OpenEvse II ammeter calibration (Craigk46 patch 8)
- SCL move g_ampacity to g_TempMonitor.m_ampacity

vD3.6.3 SCL 20150403
- fix compile errors in Arduino 1.5.8+ due to deprecation of prog_char

vD3.6.2 SCL 20150326
- add delay(200) to beginning of setup() to fix random LCD black out at boot
	Thanks to CraigK!
- code cleanup on KWH_RECORDING .. change eeprom_read_byte() to eeprom_read_dword()

vD3.6.1 SCL 20150311